sandbox/backend.yaml
# backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/almafrank/backend-guestbook@sha256:9b8996d96e01ea8b69df978460f1eba9d2fd6c784a16f12c273d3912892ed7cb
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
